[gd_scene load_steps=6 format=3 uid="uid://bk6b04e53a0k3"]

[ext_resource type="Script" path="res://objects/button_toggle.gd" id="1_84rnv"]
[ext_resource type="Texture2D" uid="uid://i4jn22gnmjty" path="res://assets/sprites/button_yellow.png" id="2_8rgoe"]
[ext_resource type="AudioStream" uid="uid://bhif4esmslnxb" path="res://assets/audio/button_on.wav" id="3_dc276"]
[ext_resource type="AudioStream" uid="uid://bnnfqqbypoi6" path="res://assets/audio/button_off.wav" id="4_8hdiu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yvgp7"]
size = Vector2(16, 16)

[node name="ButtonToggle" type="StaticBody2D"]
y_sort_enabled = true
collision_layer = 7
collision_mask = 7
script = ExtResource("1_84rnv")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_8rgoe")
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_yvgp7")

[node name="ButtonOnSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_dc276")

[node name="ButtonOffSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_8hdiu")
